# rag-seminar

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
documents/: rules_fiim.docx
frontend/: Dockerfile  frontend.py
src/: api.py  consts.py  init_db.py  llm_utils.py  script_utils.py
